--- a/src/styles/blocks/burger-menu.scss
+++ b/src/styles/blocks/burger-menu.scss
@@ -1,22 +1,26 @@
 .burger-menu {
   font-family: "Montserrat", serif;
-  font-size: 25px;
+  font-size: 27px;
   font-weight: 700;
-  line-height: 25px;
+  line-height: 27px;
 
   position: fixed;
   margin: 0;
   padding: 0 20px;
   height: 100vh;
   width: 100%;
-  background: linear-gradient(to bottom, #fefcea, $burger-menu-bgc);
+  background-image: url(../images/menu-bg.jpg);
+  background-size: cover;
+  background-repeat: no-repeat;
   border: 5px ridge rgb(255, 255, 255);
   left: -100%;
   transition: left 0.5s ease 0s;
 
   &__link {
-    color: $burger-menu-link-color;
     transition: transform 0.3s linear;
+    -webkit-text-stroke-width: 1px;
+    -webkit-text-stroke-color: white;
+    color: black;
 
     &:hover {
       box-shadow: 2px 1px 10px 2px rgb(94, 137, 255);
