--- a/src/styles/blocks/lection.scss
+++ b/src/styles/blocks/lection.scss
@@ -1,7 +1,7 @@
 .lection {
   display: flex;
   margin-top: 60px;
-  margin-bottom: 100px;
+  margin-bottom: 197px;
   background-image: url(../images/sunrise.png);
   background-repeat: no-repeat;
   background-size: cover;
@@ -11,7 +11,7 @@
   &__container {
     padding: 25px 20px;
     height: 154px;
-    margin: 213px auto;
+    margin: 213px auto 0;
     width: 278px;
     background: #fff;
     box-shadow: 0 2px 0 rgba(26, 90, 76, 0.25);
