--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -8,3 +8,5 @@
 @import "./blocks/main.scss";
 @import "./blocks/events.scss";
 @import "./blocks/lection.scss";
+@import "./blocks/gallery.scss";
+@import "./blocks/subscribe.scss";
