--- a/src/styles/blocks/main.scss
+++ b/src/styles/blocks/main.scss
@@ -1,7 +1,10 @@
 .main {
-  padding: 0 20px;
-  height: 320px;
+  padding: 0;
   margin: 0;
+
+  &__container {
+    padding: 0 20px;
+  }
 
   &__title {
     margin-top: 20px;
