--- a/src/styles/blocks/button.scss
+++ b/src/styles/blocks/button.scss
@@ -12,6 +12,11 @@
   }
 }
 
+.button--sub {
+  background-color: $square-color;
+  background-image: url("../images/Vector1.png");
+}
+
 .button--foot {
   color: $text-color;
   background-color: transparent;
