--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,21 +1,20 @@
 @import "utils";
-@import "fonts";
 @import "typography";
-@import "./utils/vars";
-@import "./utils/extends";
-@import "./utils/mixins";
-
 @import "./blocks/reset.scss";
 @import "./blocks/normalize.scss";
 @import "./blocks/header.scss";
-@import "./blocks/nav.scss";
 @import "./blocks/menu.scss";
 @import "./blocks/logo.scss";
+@import "./blocks/nav.scss";
+@import "./blocks/container.scss";
 @import "./blocks/main.scss";
 @import "./blocks/button.scss";
-@import "./blocks/footer.scss";
-@import "./blocks/container.scss";
-@import "./blocks/subscription.scss";
 @import "./blocks/events.scss";
 @import "./blocks/description.scss";
 @import "./blocks/lecture.scss";
+@import "./blocks/gallery.scss";
+@import "./blocks/subscription.scss";
+@import "./blocks/footer.scss";
+@import "./utils/vars";
+@import "./utils/extends";
+@import "./utils/mixins";
