--- a/src/styles/blocks/header.scss
+++ b/src/styles/blocks/header.scss
@@ -15,10 +15,6 @@
   position: relative;
   border: 1px solid black;
 
-  @media only screen and (max-width: 1300px) {
-    justify-content: space-between;
-  }
-
   @media only screen and (max-width: 700px) {
     flex-direction: column-reverse;
     padding: 0;
@@ -50,11 +46,24 @@
   }
 
   &__photo {
-    width: 100%;
-    max-width: 1244px;
-    max-height: 655px;
-    object-fit: cover;
-    position: relative;
+    height: 655px;
+    width: 65%;
+    background-image: url(../images/Natsionalnij-hudozhnij-muzej-Ukrayini-Kiyiv-10-1800x1200.png);
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: bottom;
+
+    @media only screen and (max-width: 1220px) {
+      height: 384px;
+      width: 65%;
+      background-position: center;
+    }
+
+    @media only screen and (max-width: 700px) {
+      width: 100%;
+      min-height: 300px;
+      background-position: bottom;
+    }
   }
 
   &__text-opacity {
@@ -76,6 +85,11 @@
 
   &__ticket-title-container {
     margin-left: 177px;
+
+    @media only screen and (max-width: 980px) {
+      margin-left: 27px;
+    }
+
     @media only screen and (max-width: 700px) {
       margin: 0 auto;
     }
@@ -87,11 +101,22 @@
     font-weight: bold;
     font-size: 74px;
     line-height: 100%;
+
+    @media only screen and (max-width: 1220px) {
+      margin: 135px 0 0;
+      font-size: 55px;
+    }
+
+    @media only screen and (max-width: 880px) {
+      margin: 80px 0 0;
+    }
+
     @media only screen and (max-width: 700px) {
       font-size: 74px;
       margin: 20px 0;
       text-align: center;
     }
+
     @media only screen and (max-width: 550px) {
       font-size: 45px;
     }
@@ -103,6 +128,11 @@
     border: 1px solid #1a5a4c;
     margin: 80px 40px 0 0;
     display: flex;
+
+    @media only screen and (max-width: 1220px) {
+      margin: 40px 9px 0 0;
+    }
+
     @media only screen and (max-width: 700px) {
       height: 50px;
       width: 280px;
