--- a/src/styles/blocks/content-main.scss
+++ b/src/styles/blocks/content-main.scss
@@ -2,35 +2,174 @@
   max-width: 1570px;
   width: 100%;
   margin: 0 auto;
-  padding: 0 22px;
+  padding: 200px 22px 0;
   border: 1px solid black;
 
+  &__title {
+    font-weight: bold;
+    font-size: 48px;
+    line-height: 100%;
+    margin-bottom: 60px;
+
+    @media only screen and (max-width: 450px) {
+      font-size: 36px;
+    }
+  }
+
   &__container-galery {
-    display: flex;
-    flex-direction: row;
+    // display: flex;
+    // flex-direction: row;
+    // margin-top: 60px;
+    // gap: 130px;
+    min-height: 520px;
+    min-width: 150px;
+    display: grid;
+    grid-template-rows: 520px;
+    grid-template-columns: 4fr 2fr;
     gap: 130px;
+    margin-bottom: 100px;
+
+    @media only screen and (max-width: 1220px) {
+      grid-template-rows: 1fr 345px;
+      grid-template-columns: 1fr;
+      gap: 0;
+    }
+
+    @media only screen and (max-width: 750px) {
+      grid-template-rows: 260px 345px;
+    }
+
+    @media only screen and (max-width: 450px) {
+      grid-template-rows: 210px 110px;
+    }
   }
 
   &__container-galery-reverse {
-    display: flex;
-    flex-direction: row-reverse;
+    min-height: 520px;
+    min-width: 150px;
+    display: grid;
+    grid-template-rows: 520px;
+    grid-template-columns: 2fr 4fr;
     gap: 130px;
-    margin-top: 100px;
+
+    @media only screen and (max-width: 1220px) {
+      grid-template-rows: 1fr 345px;
+      grid-template-columns: 1fr;
+      gap: 0;
+    }
+
+    @media only screen and (max-width: 750px) {
+      grid-template-rows: 260px 345px;
+    }
+
+    @media only screen and (max-width: 450px) {
+      grid-template-rows: 210px 110px;
+      grid-template-columns: 1fr;
+    }
   }
 
   &__galery-image {
-    max-width: 670px;
     width: 100%;
+    height: 100%;
+    object-fit: cover;
+
+    @media only screen and (max-width: 1220px) {
+      height: 699px;
+    }
+
+    @media only screen and (max-width: 750px) {
+      height: 100%;
+    }
+  }
+
+  &__galery-image-reverse {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    order: 2;
+
+    @media only screen and (max-width: 1220px) {
+      height: 699px;
+      order: 1;
+    }
+
+    @media only screen and (max-width: 750px) {
+      height: 100%;
+    }
   }
 
   &__galery-text {
-    width: 370px;
+    max-width: 370px;
     height: 97px;
+    margin-top: 50px;
+    order: 1;
+    @media only screen and (max-width: 750px) {
+      max-width: 370px;
+    }
   }
 
   &__galery-text-header {
     display: flex;
     gap: 26px;
+    margin-bottom: 32px;
+  }
+
+  &__galery-text-title {
+    font-weight: normal;
+    font-size: 36px;
+    line-height: 100%;
+    margin-bottom: 15px;
+    position: relative;
+
+    &:after {
+      position: absolute;
+      content: "";
+      top: 30%;
+      right: 0;
+      width: 15px;
+      height: 15px;
+      background-color: red;
+      @media only screen and (max-width: 450px) {
+        right: 0;
+        left: 270px;
+      }
+    }
+
+    @media only screen and (max-width: 450px) {
+      font-size: 28px;
+    }
+  }
+
+  &__galery-text-title-reverse {
+    font-weight: normal;
+    font-size: 36px;
+    line-height: 100%;
+    margin-bottom: 15px;
+    position: relative;
+
+    &:after {
+      position: absolute;
+      content: "";
+      top: 30%;
+      right: 50px;
+      width: 15px;
+      height: 15px;
+      background-color: red;
+      @media only screen and (max-width: 450px) {
+        right: 0;
+        left: 230px;
+      }
+    }
+    @media only screen and (max-width: 450px) {
+      font-size: 28px;
+    }
+  }
+
+  &__galery-text-desc {
+    max-width: 370px;
+    font-weight: 300;
+    font-size: 16px;
+    line-height: 150%;
   }
 
   &__photo-center-container {
@@ -39,10 +178,83 @@
     width: 100%;
     height: 100%;
     max-height: 674px;
+    position: relative;
+    @media only screen and (max-width: 450px) {
+      height: 410px;
+    }
+  }
+
+  &__photo-info {
+    position: absolute;
+    left: 50%;
+    margin-left: -285px;
+    top: 80%;
+    width: 570px;
+    height: 204px;
+    background-color: #fff;
+    @media only screen and (max-width: 750px) {
+      margin-left: -139px;
+      top: 80%;
+      width: 278px;
+      height: 154px;
+    }
+  }
+
+  &__photo-header-container {
+    display: flex;
+    justify-content: center;
+    gap: 146px;
+    margin-top: 45px;
+    width: 100%;
+    @media only screen and (max-width: 750px) {
+      gap: 10px;
+      margin-top: 29px;
+    }
+  }
+
+  &__photo-center-subtitle-1 {
+    font-weight: 500;
+    font-size: 14px;
+    line-height: 100%;
+    color: #687480;
+    display: flex;
+    align-items: center;
+    @media only screen and (max-width: 750px) {
+      font-weight: 500;
+      font-size: 16px;
+      line-height: 100%;
+    }
+  }
+
+  &__photo-center-subtitle-2 {
+    font-weight: bold;
+    font-size: 14px;
+    line-height: 150%;
+    color: #1a5a4c;
+    @media only screen and (max-width: 750px) {
+      font-size: 16px;
+      line-height: 150%;
+    }
+
+  }
+
+  &__photo-subtitle-container {
+    margin-top: 23px;
+    text-align: center;
+    font-weight: 400;
+    font-size: 36px;
+    line-height: 100%;
+    color: #0f0e08;
+    @media only screen and (max-width: 750px) {
+      font-size: 28px;
+      line-height: 100%;
+    }
   }
 
   &__photo-center {
     width: 100%;
+    height: 100%;
+    object-fit: cover;
   }
 }
 
@@ -67,6 +279,29 @@
         display: none;
       }
     }
+
+    @media only screen and (max-width: 1220px) {
+      max-height: 600px;
+      flex-direction: row;
+      flex-wrap: nowrap;
+      justify-content: flex-start;
+      overflow-x: hidden;
+      & :nth-child(n + 4) {
+        display: none;
+      }
+      & :nth-child(3) {
+        display: block;
+      }
+      & :nth-child(2) {
+        order: 3;
+      }
+    }
+  }
+
+  &__galery-photo {
+    @media only screen and (max-width: 1220px) {
+      height: 100%;
+    }
   }
 }
 
@@ -77,7 +312,7 @@
     background: url(../images/Rectangle_22.1.png) no-repeat center;
     background-size: cover;
     margin-top: 200px;
-    margin-bottom: 200px;
+    margin-bottom: 51px;
     width: 120%;
     max-width: 2000px;
     height: 600px;
@@ -102,11 +337,19 @@
     line-height: 100%;
     color: #fff;
     margin-bottom: 66px;
+
+    @media only screen and (max-width: 750px) {
+      width: 280px;
+      height: 54px;
+      font-weight: 300;
+      line-height: 150%;
+      text-align: center;
+    }
   }
 
   &__input-container {
     display: flex;
-    
+
   }
 
   &__input {
@@ -117,6 +360,13 @@
     font-size: 14px;
     line-height: 100%;
     margin-right: 30px;
+
+    @media only screen and (max-width: 750px) {
+      width: 233px;
+      height: 50px;
+      padding: 18px 31px;
+      margin: 0;
+    }
   }
 
   &__button {
@@ -126,5 +376,10 @@
     line-height: 100%;
     background-color: #f14a27;
     border: none;
+
+    @media only screen and (max-width: 750px) {
+      width: 50px;
+      height: 50px;
+    }
   }
 }
