--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -4,6 +4,7 @@
 @import "blocks/normalize.scss";
 @import "blocks/header.scss";
 @import "blocks/content-main.scss";
+@import "blocks/footer.scss";
 
 body {
   background: $c-gray;
