--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -114,13 +114,11 @@ h4 {
   }
 
   @media (min-width: 768px) {
-    
+
     background: none;
     padding: 0;
     margin-bottom: 90px;
     height: 384px;
-    
-    
 
     &__2 {
       display: none;
@@ -136,17 +134,18 @@ h4 {
     }
 
     &__topss {
+      position: relative;
       display: flex;
       flex-direction: column;
       padding-left: 34px;
       padding-top: 45px;
       min-width: 263px;
-
+      margin: 0 0 0 auto;
     }
 
     &__foto-topss {
-      height: 384px;
-      width: 100%;
+      height: 100%;
+      width: 1245px;
     }
 
     &__menuss {
@@ -195,7 +194,7 @@ h4 {
       padding-top: 238px;
       padding-bottom: 70px;
     }
-  
+
     &__textss {
       height: 50px;
       width: 150px;
@@ -205,7 +204,7 @@ h4 {
       color: $colorGren;
       border: 1px solid $colorGren;
     }
-  
+
     &__storss {
       display: flex;
       align-items: center;
@@ -214,6 +213,35 @@ h4 {
       width: 50px;
       background-color: $colorGren;
     }
+  }
+
+  @media (min-width: 1000px) {
+
+    background: none;
+    padding: 0;
+    margin-bottom: 90px;
+    height: 655px;
+
+    &__1 {
+      height: 655px;
+    }
+
+    &__buyss {
+      padding-top: 468px;
+    }
+  }
+
+  @media (min-width: 1280px) {
+
+    background: none;
+    padding: 0;
+    margin-bottom: 90px;
+
+    &__1 {
+      
+      justify-content: flex-end;
+    }
+    
   }
 }
 
@@ -242,6 +270,16 @@ h4 {
     height: 210px;
     padding-top: 150px;
     margin-bottom: 197px;
+
+    @media (min-width: 768px) {
+      height: 390px;
+      padding-top: 306px;
+    }
+
+    @media (min-width:1100px) {
+      height: 619px;
+      padding-top: 448px;
+    }
   }
 
   &__content {
@@ -255,6 +293,15 @@ h4 {
     & :last-child {
       font-weight: 400;
       font-size: 28px;
+    }
+
+    @media (min-width: 768px) {
+      height: 204px;
+      width: 570px;
+      padding: 45px 100px;
+      & :last-child {
+        text-align: left;
+      }
     }
   }
 
@@ -273,10 +320,14 @@ h4 {
       color: $colorGren;
       font-size: 16px;
     }
+
+    @media (min-width: 768px) {
+
+      & :last-child {
+        padding-right: 100px;
+      }
+    }
   }
-
-  
-
 }
 
 .card {
@@ -293,6 +344,11 @@ h4 {
     border-radius: 8px;
     margin-bottom: 15px;
     transition: transform 1s linear;
+
+    @media (min-width: 450px) {
+      height: 520px;
+      max-width: 670px;
+    }
 
     @media (min-width: 750px) {
       &:hover {
@@ -351,6 +407,35 @@ h4 {
     line-height: 24px;
     color: $colorGrey;
   }
+
+  @media (min-width: 1200px) {
+    flex-direction: row;
+    padding-bottom: 100px;
+
+    &__contents {
+      padding-left: 130px;
+      padding-top: 159px;
+
+      &--2 {
+        order: -1;
+        padding-left: 0;
+        padding-right: 130px;
+      }
+    }
+  }
+
+  @media (min-width: 1440px) {
+
+    & {
+      min-width: 1370px;
+    }
+
+    &__foto {
+      max-width: 870;
+      object-fit: cover;
+      flex-grow: 2;
+    }
+  }
 }
 
 .footer {
@@ -405,6 +490,10 @@ h4 {
     padding: 50px 30px;
     display: flex;
     flex-direction: column;
+
+    @media (min-width:768px) {
+      flex-direction: row;
+    }
   }
 
   &__days {
@@ -456,6 +545,12 @@ h4 {
     align-items: center;
     justify-content: space-between;
     padding-bottom: 80px;
+
+    @media (min-width: 768px) {
+      flex-direction: column;
+      justify-content: flex-start;
+      margin-right: 55px;
+    }
   }
 
   &__inst {
@@ -481,6 +576,10 @@ h4 {
     font-size: 30px;
     text-decoration: none;
     color: black;
+
+    @media (min-width: 768px) {
+      padding-bottom: 61px;
+    }
   }
 
   &__navig {
@@ -529,6 +628,7 @@ h4 {
   }
 
   &__list {
+    position: relative;
     display: flex;
     flex-direction: column;
     flex-wrap: wrap;
@@ -536,6 +636,23 @@ h4 {
     height: 150px;
     padding: 20px;
     margin: 0;
+
+    &::before {
+      content: "";
+      position: absolute;
+      width: 1px;
+      height: 280px;
+      left: 50%;
+      bottom: 40px;
+
+      background: rgba(26, 90, 76, 0.5);
+      transform: rotate(-90deg) translateX(-50%);
+
+      @media (min-width:768px) {
+        height: 460px;
+        bottom: -70px;
+      }
+    }
 
     @media (min-width: 425px) {
       & {
@@ -573,6 +690,56 @@ h4 {
 
     & p:first-child() {
       padding-bottom: 14px;
+    }
+  }
+
+  @media (min-width: 768px) {
+    &__copyright {
+      flex-direction: row;
+      justify-content: space-between;
+
+      padding: 0 10%;
+    }
+
+    &__days {
+      margin-right: 80px;
+    }
+
+    &__linke {
+      width: 176px;
+    }
+
+    &__nav {
+      justify-content: center;
+    }
+  }
+
+  @media (min-width: 1024px) {
+    &__nav {
+      display: flex;
+      flex-direction: row;
+    }
+
+    &__menu {
+      margin-left: 125px;
+    }
+
+    &__link {
+      padding-right: 65px;
+    }
+
+    &__list {
+      &::before {
+        content: "";
+        position: absolute;
+        width: 1px;
+        height: 280px;
+        left: -40%;
+        bottom: -100%;
+
+        background: rgba(26, 90, 76, 0.5);
+        transform: translateX(-50%);
+      }
     }
   }
 
