--- a/src/styles/blocks/lection.scss
+++ b/src/styles/blocks/lection.scss
@@ -8,13 +8,63 @@
   background-position: center;
   height: 320px;
 
+  @include screen-760 {
+    margin-bottom: 210px;
+    margin-top: 90px;
+    height: 390px;
+  }
+
+  @include screen-1280 {
+    margin-bottom: 302px;
+    margin-top: 100px;
+    height: 550px;
+  }
+
+  @include screen-1440 {
+    margin-bottom: 297px;
+    height: 619px;
+  }
+
+  @include screen-1920 {
+    margin-bottom: 316px;
+    height: 674px;
+  }
+
   &__container {
     padding: 25px 20px;
     height: 154px;
-    margin: 213px auto 0;
+    margin: 270px auto 0;
     width: 278px;
     background: #fff;
     box-shadow: 0 2px 0 rgba(26, 90, 76, 0.25);
+    transition: transform 0.4s linear;
+
+    @include screen-760 {
+      margin: 323px auto 0;
+      width: 570px;
+      height: 204px;
+      padding: 45px 100px;
+    }
+
+    @include screen-760 {
+      margin: 323px auto 0;
+    }
+
+    @include screen-1280 {
+      margin: 473px auto 0;
+    }
+
+    @include screen-1440 {
+      margin: 543px auto 0;
+    }
+
+    @include screen-1920 {
+      margin: 598px auto 0;
+    }
+
+    &:hover {
+      transform: scale(1.1);
+    }
 
     &-block {
       display: flex;
@@ -30,6 +80,11 @@
         text-align: left;
         text-transform: uppercase;
         color: #687480;
+
+        @include screen-760 {
+          font-size: 14px;
+          line-height: 14px;
+        }
       }
 
       &-date {
@@ -40,6 +95,11 @@
         line-height: 24px;
         color: #1a5a4c;
         text-align: left;
+
+        @include screen-760 {
+          font-size: 18px;
+          line-height: 27px;
+        }
       }
     }
 
@@ -51,6 +111,21 @@
       font-weight: 400;
       line-height: 28px;
       text-align: center;
+
+      @include screen-760 {
+        padding: 16px 2px;
+        text-align: left;
+        font-size: 36px;
+        line-height: 36px;
+      }
+
+      a {
+        color: black;
+        &:hover {
+          text-decoration: underline;
+          cursor: pointer;
+        }
+      }
     }
   }
 }
