--- a/src/styles/blocks/subscribe.scss
+++ b/src/styles/blocks/subscribe.scss
@@ -1,9 +1,47 @@
 .subscribe {
-  height: 320px;
+  margin-top: 0;
+  height: 386px;
   background-image: url(../images/subscribe.png);
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
+
+  @include screen-760 {
+    height: 380px;
+  }
+
+  @include screen-1280 {
+    height: 550px;
+  }
+
+  @include screen-1440 {
+    height: 550px;
+  }
+
+  @include screen-1920 {
+    height: 650px;
+  }
+
+  &__container {
+    max-width: 1920px;
+    margin: 0 auto;
+
+    @include screen-760 {
+      padding: 0 34px;
+    }
+
+    @include screen-1280 {
+      padding: 0 55px;
+    }
+
+    @include screen-1440 {
+      padding: 0 136px;
+    }
+
+    @include screen-1920 {
+      padding: 0 175px;
+    }
+  }
 
   &__title {
     display: flex;
@@ -15,6 +53,20 @@
     font-weight: 700;
     line-height: 36px;
     color: #fff;
+
+    @include screen-760 {
+      padding-top: 64px;
+      font-size: 48px;
+      line-height: 48px;
+    }
+
+    @include screen-1280 {
+      padding-top: 140px;
+    }
+
+    @include screen-1920 {
+      padding-top: 175px;
+    }
   }
 
   &__description {
@@ -27,6 +79,12 @@
     line-height: 27px;
     text-align: center;
     color: #fff;
+
+    @include screen-760 {
+      margin: 20px auto 66px;
+      line-height: 18px;
+      width: 449px;
+    }
   }
 
   &__form {
@@ -35,8 +93,8 @@
     align-items: center;
 
     &-email {
-      padding-left: 30px;
-      width: 230px;
+      padding-left: 31px;
+      width: 233px;
       height: 50px;
       font-size: 13px;
       font-style: normal;
@@ -51,6 +109,18 @@
 
       &:focus {
         border: 1px solid #0075ff;
+      }
+
+      @include screen-760 {
+        width: 395px;
+        height: 70px;
+        margin-right: 10px;
+        padding-left: 28px;
+      }
+
+      @include screen-1280 {
+        margin-right: 30px;
+        padding-left: 35px;
       }
     }
     &-button {
@@ -72,8 +142,13 @@
       &:hover {
         cursor: pointer;
         background-color: #005ecc;
-        box-shadow: 0 13px 27px rgba(0, 83, 181, 0.46);
+        box-shadow: -5px -5px 5px 1px rgba(0, 83, 181, 0.46);
         transform: scale3d(1.2, 1.2, 1.2) rotate(180deg);
+      }
+
+      @include screen-760 {
+        width: 70px;
+        height: 70px;
       }
     }
   }
