--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,6 +1,7 @@
 @import "utils";
 @import "fonts";
 @import "typography";
+@import "./utils/animation.scss";
 @import "./utils/reset.scss";
 @import "./blocks/burger-menu.scss";
 @import "./blocks/header.scss";
