--- a/src/styles/utils/_mixins.scss
+++ b/src/styles/utils/_mixins.scss
@@ -5,14 +5,38 @@
   }
 }
 
-@mixin onIpad {
-  @media (min-width: 768px) {
+@mixin screen-760 {
+  @media (min-width: 760px) {
     @content;
   }
 }
 
-@mixin onDesktop {
+@mixin screen-1280 {
   @media (min-width: 1280px) {
+    @content;
+  }
+}
+
+@mixin screen-1440 {
+  @media (min-width: 1440px) {
+    @content;
+  }
+}
+
+@mixin screen-1920 {
+  @media (min-width: 1920px) {
+    @content;
+  }
+}
+
+@mixin screen-max-759 {
+  @media (max-width: 759px) {
+    @content;
+  }
+}
+
+@mixin screen-max-1279 {
+  @media (max-width: 1279px) {
     @content;
   }
 }
