--- a/src/styles/blocks/footer.scss
+++ b/src/styles/blocks/footer.scss
@@ -1,12 +1,248 @@
 .footer {
-  width: 320px;
-  padding: 0 20px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
   margin: 70px auto 0;
+  max-width: 1920px;
+
+  @include screen-1280 {
+    flex-direction: row;
+  }
+
+  &__block {
+    justify-content: center;
+    @include screen-760 {
+      display: flex;
+    }
+  }
+
+  &__icons {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin: 0 auto 40px;
+    width: 280px;
+
+    @include screen-760 {
+      flex-direction: column;
+      justify-content: flex-start;
+      margin: 0 55px 0 0;
+      width: 65px;
+    }
+
+    &-logo-img {
+      transition: transform 0.3s linear;
+
+      @include screen-760 {
+        margin-bottom: 62px;
+      }
+
+      &:hover {
+        transform: scale(1.2);
+      }
+    }
+
+    &-resource {
+      display: flex;
+      width: 61px;
+
+      &-facebook {
+        margin-right: 26px;
+
+        @include screen-760 {
+          margin-left: 6px;
+          margin-right: 20px;
+        }
+      }
+    }
+  }
+
+  &__information-container {
+    display: flex;
+    justify-content: center;
+    font-family: "IBM Plex Sans", serif;
+    font-size: 14px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 21px;
+    text-align: left;
+  }
+
+  &__shedule {
+    width: 130px;
+    margin-right: 22px;
+
+    @include screen-760 {
+      width: 160px;
+      margin-right: 80px;
+    }
+
+    &-title {
+      margin-bottom: 20px;
+    }
+
+    &-article {
+      margin-top: 20px;
+    }
+  }
+
+  &__contacts {
+    width: 130px;
+
+    @include screen-760 {
+      width: 176px;
+    }
+
+    &-title {
+      margin-bottom: 20px;
+    }
+
+    &-item {
+      transition: transform 0.3s linear;
+
+      &:hover {
+        transform: scale(1.05);
+      }
+    }
+
+    &-link {
+      color: black;
+
+      &:hover {
+        text-decoration: underline;
+      }
+    }
+  }
+
+  &__container {
+    margin: 0 auto;
+
+    @include screen-760 {
+      display: none;
+    }
+  }
+
+  &__arrow-container {
+    display: flex;
+    justify-content: flex-end;
+    margin-bottom: 20px;
+    width: 280px;
+  }
+
+  &__link {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 50px;
+    width: 50px;
+    border: 1px solid #1a5a4c;
+    border-radius: 30px;
+    transition: animation 0.3 linear;
+
+    &:hover {
+      background: linear-gradient(0.5turn, #fff, #fff, rgb(255, 143, 91));
+    }
+
+    &-arrow {
+      color: #1a5a4c;
+    }
+
+    &:hover &-arrow {
+      animation: footer-arrow-move 2s infinite linear;
+    }
+  }
+
+  &__line {
+    display: flex;
+    justify-content: center;
+    align-self: center;
+    margin-bottom: 40px;
+    width: 280px;
+    height: 1px;
+    background: rgba(26, 90, 76, 0.5);
+
+    @include screen-760 {
+      margin-top: 46px;
+      margin-bottom: 51px;
+      width: 460px;
+      margin-left: 160px;
+    }
+
+    @include screen-1280 {
+      margin: 0;
+      transform: rotate(-90deg);
+      width: 260px;
+      justify-content: flex-start;
+    }
+  }
+
+  &__nav {
+    display: flex;
+    flex-direction: column;
+    margin: 0 auto;
+    width: 280px;
+    @include screen-760 {
+      width: 296px;
+    }
+
+    @include screen-1280 {
+      margin: 0 250px 0 0;
+    }
+
+    &-item {
+      display: flex;
+      justify-content: space-between;
+
+      @include screen-760 {
+        width: 315px;
+      }
+    }
+
+    &-link {
+      margin-bottom: 20px;
+      min-width: 75px;
+      font-family: "IBM Plex Sans", serif;
+      font-size: 14px;
+      font-style: normal;
+      font-weight: 400;
+      line-height: 14px;
+      text-align: left;
+      color: black;
+      transition: transform 0.3s linear;
+
+      &:hover {
+        transform: scale(1.1);
+      }
+    }
+  }
 
   &__bottom {
+    margin: 50px auto 28px;
     display: flex;
     flex-direction: column;
     justify-content: center;
+    max-width: 1920px;
+
+    @include screen-760 {
+      padding: 0 34px;
+      margin-top: 80px;
+      margin-bottom: 36px;
+      flex-direction: row;
+      justify-content: space-between;
+    }
+
+    @include screen-1280 {
+      padding: 0 55px;
+      flex-direction: row;
+    }
+
+    @include screen-1440 {
+      padding: 0 136px;
+    }
+
+    @include screen-1440 {
+      padding: 0 175px;
+    }
 
     &-text {
       font-family: "IBM Plex Sans", serif;
