--- a/src/styles/blocks/header.scss
+++ b/src/styles/blocks/header.scss
@@ -7,17 +7,147 @@
   background-position: center;
   transition: padding 0.5s ease 0s;
 
+  @include screen-760 {
+    background-image: none;
+    height: 384px;
+  }
+
+  @include screen-1280 {
+    height: 655px;
+  }
+
+  &__main-title {
+    font-family: "Montserrat", serif;
+    font-size: 55px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: 55px;
+    text-align: left;
+    height: 114px;
+    width: 360px;
+    top: 135.5px;
+    right: 228px;
+
+    @include screen-max-759 {
+      display: none;
+    }
+
+    @include screen-760 {
+      position: relative;
+
+      &-strongtext {
+        mix-blend-mode: multiply;
+        -webkit-text-stroke-width: 1px;
+        -webkit-text-stroke-color: black;
+        color: #fff;
+      }
+    }
+
+    @include screen-1280 {
+      height: 154px;
+      width: 462px;
+      top: 250.5px;
+      right: 298px;
+      font-size: 72px;
+      line-height: 72px;
+    }
+  }
+
+  &__main-button {
+    margin: 0;
+    width: 150px;
+    height: 70px;
+    border: 1px solid #1a5a4c;
+    top: 175.5px;
+    right: 228px;
+
+    @include screen-max-759 {
+      display: none;
+    }
+
+    @include screen-760 {
+      position: relative;
+    }
+
+    @include screen-1280 {
+      right: 298px;
+      top: 290.5px;
+    }
+
+    &-name {
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      width: 150px;
+      height: 70px;
+      font-family: "IBM Plex Sans", serif;
+      font-size: 16px;
+      font-style: normal;
+      font-weight: 500;
+      line-height: 16px;
+      text-align: center;
+    }
+
+    &-buy {
+      position: absolute;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      width: 70px;
+      height: 70px;
+      background: #1a5a4c;
+      text-align: center;
+      color: #d7dde3;
+      transition: transform 0.3s linear, box-shadow 0.3s linear;
+      top: -1px;
+      left: 149px;
+
+      &:hover {
+        transform: scale3d(1.2, 1.2, 1.2) rotate(180deg);
+        background-color: rgb(255, 135, 80);
+        color: #000;
+        box-shadow: -5px -5px 5px 1px rgba(0, 83, 181, 0.46);
+      }
+    }
+  }
+
   &__container {
     margin: 0 auto;
     max-width: 1920px;
     padding: 0 20px;
 
-    @include onIpad {
+    @include screen-760 {
       padding: 0 34px;
     }
-
-    @include onDesktop {
+    @include screen-1280 {
       padding: 0 55px;
+    }
+    @include screen-1440 {
+      padding: 0 134px;
+    }
+    @include screen-1920 {
+      padding: 0 175px;
+    }
+  }
+
+  &__background {
+    position: relative;
+    bottom: 155px;
+    height: 655px;
+    width: 65%;
+    left: 35%;
+    background-image: url("../images/header-museum.png");
+    background-size: cover;
+    background-repeat: no-repeat;
+
+    @include screen-max-759 {
+      display: none;
+      height: 320px;
+      width: 100%;
+    }
+
+    @media (max-width: 1279px) {
+      height: 384px;
     }
   }
 
@@ -68,7 +198,6 @@
   &__search {
     width: 18px;
     height: 12px;
-
     &-image {
       width: 18px;
       height: 12px;
@@ -79,12 +208,10 @@
     padding-top: 9px;
     z-index: 1;
     transition: transform 0.2s linear;
-
     &-img {
       width: 55px;
       height: 61px;
-
-      @include onIpad {
+      @include screen-760 {
         width: 68px;
         height: 72px;
       }
@@ -98,128 +225,53 @@
       color: $header-strongtext-color;
     }
   }
+
+  &__events {
+    position: relative;
+    transform: rotate(90deg);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 230px;
+    height: 70px;
+    opacity: 0;
+
+    @include screen-1280 {
+      top: 478px;
+      right: 107px;
+      opacity: 1;
+      z-index: 0;
+    }
+
+    &-text {
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      height: 14px;
+      width: 43px;
+      font-family: "IBM Plex Sans", serif;
+      font-size: 14px;
+      font-style: normal;
+      font-weight: 700;
+      line-height: 14px;
+      text-align: left;
+      color: #687480;
+      transform: rotate(180deg);
+
+      &-link {
+        color: #687480;
+        transition: transform 0.4s linear;
+
+        &:hover {
+          transform: scale(1.5) rotate(450deg);
+        }
+      }
+    }
+
+    &-line {
+      width: 70px;
+      height: 0;
+      border: 1px solid #687480;
+    }
+  }
 }
-//   display: flex;
-//   margin: 0 auto;
-//   position: relative;
-//   width: 1920px;
-//   padding: 0 175px;
-
-//   &__nav {
-//     display: flex;
-//     justify-content: space-between;
-
-//   }
-
-//   &__background {
-//     height: 655px;
-//     width: 1245px;
-//     background-image: url(../images/header-museum.png);
-//     background-repeat: no-repeat;
-//     background-size: cover;
-//     transition: padding 0.5s ease 0s;
-//   }
-
-//   &__logo {
-//     margin-top: 15px;
-//     z-index: 1;
-//     width: 68px;
-//     height: 72px;
-//     font-family: "Montserrat", serif;
-//     font-size: 36px;
-//     font-style: normal;
-//     font-weight: 700;
-//     line-height: 36px;
-//     letter-spacing: 0;
-
-//     transition: transform 0.2s linear;
-
-//     &:hover {
-//       transform: scale(1.1);
-//     }
-
-//     &-link {
-//       color: $header-strongtext-color;
-//     }
-//   }
-
-//     &-strongtext {
-//       mix-blend-mode: multiply;
-//       -webkit-text-stroke-width: 1px;
-//       -webkit-text-stroke-color: black;
-//       color: #fff;
-//     }
-
-//   &__button {
-//     display: flex;
-//     justify-content: space-between;
-//     align-items: center;
-//     width: 230px;
-//     height: 70px;
-//     border: 1px solid #1a5a4c;
-
-//     &-name {
-//       display: flex;
-//       align-items: center;
-//       justify-content: center;
-//       width: 150px;
-//       height: 70px;
-//       font-family: "IBM Plex Sans", serif;
-//       font-size: 16px;
-//       font-style: normal;
-//       font-weight: 500;
-//       line-height: 16px;
-//       text-align: center;
-//     }
-
-//     &-buy {
-//       display: flex;
-//       align-items: center;
-//       justify-content: center;
-//       width: 70px;
-//       height: 70px;
-//       background: #1a5a4c;
-//       text-align: center;
-//       color: #d7dde3;
-//       transition: transform 0.3s linear;
-
-//       &:hover {
-//         transform: scale3d(1.2, 1.2, 1.2);
-//       }
-//     }
-//   }
-
-//   &__events {
-//     transform: rotate(90deg);
-//     display: flex;
-//     justify-content: center;
-//     align-items: center;
-//     width: 230px;
-//     height: 70px;
-
-//     &-text {
-//       display: flex;
-//       align-items: center;
-//       justify-content: center;
-//       height: 14px;
-//       width: 43px;
-//       font-family: "IBM Plex Sans", serif;
-//       font-size: 14px;
-//       font-style: normal;
-//       font-weight: 700;
-//       line-height: 14px;
-//       text-align: left;
-//       color: #687480;
-//       transform: rotate(180deg);
-//     }
-
-//     &-line {
-//       width: 70px;
-//       height: 0;
-//       border: 1px solid #687480;
-//     }
-//   }
-
-// @media (max-width: 768px) {
-//   //
-// }
