--- a/src/styles/blocks/_grid.scss
+++ b/src/styles/blocks/_grid.scss
@@ -12,14 +12,33 @@
   @include laptop {
     grid-template-columns: repeat(12, 1fr);
     column-gap: 30px;
-    
+  }
+
+  &__row {
+    @for $i from 1 through 6 {
+      &--#{$i} {
+        grid-template-rows: repeat(#{$i}, 1fr);
+      }
+      &--tablet--#{$i} {
+        @include tablet {
+          grid-template-rows: repeat(#{$i}, 1fr);
+        }
+      }
+      &--laptop--#{$i} {
+        @include laptop {
+          grid-template-rows: repeat(#{$i}, 1fr);
+        }
+      }
+    }
   }
 
   &__item {
     @for $start from 1 through 12 {
       @for $end from $start through 12 {
         &--#{$start}-#{$end} {
-          grid-column: #{$start} / #{$end+1};
+          @include smartphone {
+            grid-column: #{$start} / #{$end+1};
+          }
         }
         &--tablet--#{$start}-#{$end} {
           @include tablet {
@@ -29,6 +48,28 @@
         &--laptop--#{$start}-#{$end} {
           @include laptop {
             grid-column: #{$start} / #{$end+1};
+          }
+        }
+      }
+    }
+  }
+
+  &__item-row {
+    @for $start from 1 through 12 {
+      @for $end from $start through 12 {
+        &--#{$start}-#{$end} {
+          @include smartphone {
+            grid-row: #{$start} / #{$end+1};
+          }
+        }
+        &--tablet--#{$start}-#{$end} {
+          @include tablet {
+            grid-row: #{$start} / #{$end+1};
+          }
+        }
+        &--laptop--#{$start}-#{$end} {
+          @include laptop {
+            grid-row: #{$start} / #{$end+1};
           }
         }
       }
