--- a/src/styles/blocks/_page.scss
+++ b/src/styles/blocks/_page.scss
@@ -19,4 +19,23 @@
       transform: translateY(0);
     }
   }
+
+  &__actuals {
+    margin-top: 260px;
+    padding-bottom: 80px;
+    @extend %section-margin-bottom;
+    @include tablet {
+      margin-top: 90px;
+      padding-bottom: 100px;
+    }
+    @include laptop {
+      margin-top: 200px;
+    }
+  }
+  &__gallery {
+    @extend %section-margin-bottom;
+  }
+  &__signup {
+    margin-bottom: 48px;
+  }
 }
