--- a/src/styles/utils/_extends.scss
+++ b/src/styles/utils/_extends.scss
@@ -57,6 +57,15 @@
   color: $color-text-primary;
 }
 
+%IBM-events-text {
+  font-family: "IBM Plex Sans", sans-serif;
+  font-style: normal;
+  font-weight: 700;
+  font-size: 14px;
+  line-height: 14px;
+  color: $color-text-events;
+}
+
 %icon-style {
   display: block;
   text-decoration: none;
@@ -70,4 +79,85 @@
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
+}
+
+%padding-container {
+  padding-left: 20px;
+  padding-right: 20px;
+  @include tablet {
+    padding-left: 36px;
+    padding-right: 36px;
+  }
+  @include laptop {
+    padding-left: 46px;
+    padding-right: 46px;
+  }
+  @include laptopPlus {
+    padding-left: 120px;
+    padding-right: 120px;
+  }
+  @include wideScreen {
+    padding-left: 140px;
+    padding-right: 140px;
+  }
+  @include fullHD {
+    padding-left: 175px;
+    padding-right: 175px;
+  }
+  @include largeScreen {
+    padding-left: 220px;
+    padding-right: 220px;
+  }
+}
+
+%title-position {
+  text-align: center;
+  margin-bottom: 40px;
+  @include tablet {
+    text-align: left;
+    margin-bottom: 48px;
+  }
+  @include laptop {
+    text-align: left;
+    margin-bottom: 60px;
+  }
+}
+
+%title-fonts {
+  font-family: Montserrat, sans-serif;
+  font-style: normal;
+  font-weight: 700;
+  font-size: 36px;
+  line-height: 100%;
+  @include tablet {
+    font-size: 48px;
+  }
+}
+
+%subtitle-fonts {
+  font-family: Montserrat, sans-serif;
+  font-style: normal;
+  font-weight: 400;
+  font-size: 28px;
+  line-height: 100%;
+  @include tablet {
+    font-size: 36px;
+  }
+}
+
+%section-margin-bottom {
+  margin-bottom: 100px;
+  @include tablet {
+    margin-bottom: 90px;
+  }
+  @include laptop {
+    margin-bottom: 200px;
+  }
+}
+
+%link-decoration {
+  transition: text-shadow $time ease-in-out;
+  &:hover {
+    text-shadow: 1px 1px 1px $color-text-events;
+  }
 }
