--- a/src/styles/utils/_mixins.scss
+++ b/src/styles/utils/_mixins.scss
@@ -1,3 +1,9 @@
+@mixin smartphone {
+  @media (max-width: 767px) {
+    @content;
+  }
+}
+
 @mixin tablet {
   @media (min-width: 768px) {
     @content;
@@ -6,6 +12,12 @@
 
 @mixin laptop {
   @media (min-width: 1280px) {
+    @content;
+  }
+}
+
+@mixin laptopPlus {
+  @media (min-width: 1410px) {
     @content;
   }
 }
