--- a/src/styles/blocks/_container.scss
+++ b/src/styles/blocks/_container.scss
@@ -1,7 +1,9 @@
 .container {
-  display: flex;
-  justify-content: center;
-  padding: 0 20px;
+  @extend %padding-container;
+  &__flex-center {
+    display: flex;
+    justify-content: center;
+  }
   &__button {
     @include tablet {
       justify-content: flex-start;
