--- a/src/styles/blocks/_menu.scss
+++ b/src/styles/blocks/_menu.scss
@@ -13,11 +13,15 @@
   &__content {
     display: flex;
     justify-content: space-between;
-
-    background-color: #fff;
-    padding: 32px 20px 0;
     width: 100%;
     height: 100%;
+
+    background-color: #fff;
+    padding-top: 32px;
+    @extend %padding-container;
+    @include tablet {
+      padding-top: 45px;
+    }
   }
 
   &__wrapper {
