--- a/src/styles/blocks/content-main.scss
+++ b/src/styles/blocks/content-main.scss
@@ -265,6 +265,17 @@
   padding: 0 22px;
   border: 1px solid black;
 
+  &__header-title {
+    font-weight: bold;
+    margin-bottom: 60px;
+    font-size: 48px;
+    line-height: 100%;
+
+    @media only screen and (max-width: 750px) {
+      font-size: 36px;
+    }
+  }
+
   &__galery {
     height: 990px;
     border: 1px solid black;
@@ -301,6 +312,27 @@
   &__galery-photo {
     @media only screen and (max-width: 1220px) {
       height: 100%;
+    }
+  }
+
+  @media only screen and (max-width: 1220px) {
+    &__round-items {
+      display: flex;
+      flex-direction: row;
+      justify-content: space-between;
+      gap: 0 22px;
+      margin: 30px auto 0;
+      width: 100px;
+    }
+
+    &__round-item {
+      width: 10px;
+      height: 10px;
+      border-radius: 50%;
+      background-color: #e0e0e0;
+      &:nth-child(1) {
+        background-color: #1a5a4c;
+      }
     }
   }
 }
