--- a/src/styles/blocks/header.scss
+++ b/src/styles/blocks/header.scss
@@ -61,6 +61,12 @@
 
     @media only screen and (max-width: 700px) {
       width: 100%;
+      min-height: 600px;
+      background-position: bottom;
+    }
+
+    @media only screen and (max-width: 510px) {
+      width: 100%;
       min-height: 300px;
       background-position: bottom;
     }
@@ -108,7 +114,7 @@
     }
 
     @media only screen and (max-width: 880px) {
-      margin: 80px 0 0;
+      margin: 110px 0 0;
     }
 
     @media only screen and (max-width: 700px) {
