--- a/src/styles/blocks/footer.scss
+++ b/src/styles/blocks/footer.scss
@@ -2,8 +2,7 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
-  margin: 70px auto 0;
-  max-width: 1920px;
+  padding-top: 70px;
 
   @include screen-1280 {
     flex-direction: row;
@@ -165,7 +164,6 @@
       margin-top: 46px;
       margin-bottom: 51px;
       width: 460px;
-      margin-left: 160px;
     }
 
     @include screen-1280 {
