--- a/src/styles/blocks/gallery.scss
+++ b/src/styles/blocks/gallery.scss
@@ -54,7 +54,7 @@
       display: none;
     }
 
-    &-active label {
+    &-on .gallery__slider-on-lab {
       border-radius: 10px;
       display: inline-block;
       width: 9px;
@@ -62,7 +62,7 @@
       background: #e0e0e0;
     }
 
-    &-active {
+    &-on {
       display: flex;
       justify-content: space-between;
       align-items: center;
@@ -72,19 +72,19 @@
       text-align: center;
     }
 
-    &-active label:hover {
+    &-on .gallery__slider-on-lab:hover {
       background: #76c8ff;
       border-color: #777;
       cursor: pointer;
     }
 
-    & input {
+    & .gallery__slider-switcher {
       display: none;
     }
   }
 
   &__slides {
-    & article {
+    & .gallery__slides-images-image {
       width: 20%;
       float: left;
     }
@@ -154,10 +154,10 @@
     }
   }
 
-  #switch1:checked ~ .gallery__slider-active label:nth-child(1),
-  #switch2:checked ~ .gallery__slider-active label:nth-child(2),
-  #switch3:checked ~ .gallery__slider-active label:nth-child(3),
-  #switch4:checked ~ .gallery__slider-active label:nth-child(4) {
+  #switch1:checked ~ .gallery__slider-on .gallery__slider-on-lab:nth-child(1),
+  #switch2:checked ~ .gallery__slider-on .gallery__slider-on-lab:nth-child(2),
+  #switch3:checked ~ .gallery__slider-on .gallery__slider-on-lab:nth-child(3),
+  #switch4:checked ~ .gallery__slider-on .gallery__slider-on-lab:nth-child(4) {
     background: #1a5a4c;
   }
 
