--- a/src/styles/blocks/footer.scss
+++ b/src/styles/blocks/footer.scss
@@ -5,18 +5,24 @@
   justify-content: center;
   gap: 0 130px;
 
-  &__line {
-    position: relative;
+  @media only screen and (max-width: 1380px) {
+    gap: 0 61px;
+  }
 
-    &::before {
-      height: 1px;
-      width: 260px;
-      border-top: 1px solid rgba(26, 90, 76, 0.5);
-      transform: rotate(90deg);
-      content: "";
-      position: absolute;
-      top: 20%;
-      right: -130px;
+  @media only screen and (max-width: 1100px) {
+    flex-direction: column;
+  }
+
+  &__line {
+    height: 260px;
+    width: 2px;
+    border: 1px solid rgba(255, 15, 6, 0.5);
+
+    @media only screen and (max-width: 1100px) {
+      max-width: 400px;
+      width: 100%;
+      height: 2px;
+      margin: 20px auto;
     }
   }
 
@@ -25,6 +31,17 @@
     flex-direction: row;
     justify-content: space-between;
     gap: 0 138px;
+
+    @media only screen and (max-width: 1100px) {
+      justify-content: space-between;
+      max-width: 500px;
+      width: 100%;
+      margin: 0 auto;
+    }
+
+    @media only screen and (max-width: 500px) {
+      gap: 20px;
+    }
   }
 
   &__center-left-title {
@@ -56,11 +73,24 @@
     font-size: 14px;
     line-height: 150%;
     margin-bottom: 20px;
+    @media only screen and (max-width: 700px) {
+      justify-content: space-between;
+      min-width: 5px;
+      width: 100%;
+    }
   }
 
   &__right-container {
     display: flex;
     gap: 0 100px;
+
+    @media only screen and (max-width: 1100px) {
+      justify-content: space-between;
+      max-width: 500px;
+      width: 100%;
+      margin: 0 auto;
+    }
+
   }
 
   &__galery {
