--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -49,6 +49,7 @@ h4 {
   display: flex;
   flex-direction: column;
   margin-bottom: 70px;
+  scroll-behavior: smooth;
 
   &__top {
     display: flex;
@@ -86,6 +87,7 @@ h4 {
       width: 40px;
       transform: rotate(360deg);
       transition: transform 0.5s linear;
+      scroll-behavior: smooth;
     }
   }
 
@@ -135,6 +137,7 @@ h4 {
     color: #fff;
     text-transform: uppercase;
     text-decoration: none;
+    scroll-behavior: smooth;
 
     &--size {
       font-size: 16px;
@@ -176,11 +179,22 @@ h4 {
   }
 
   &__stor {
+    position: relative;
     width: 50px;
     height: 50px;
     background: #1a5a4c;
     text-align: center;
     line-height: 50px;
+
+    &::before {
+      position: absolute;
+      top: 0;
+      left: -460%;
+      content: "";
+      height: 50px;
+      width: 250px;
+      
+    }
   }
 
   &__section {
@@ -254,6 +268,12 @@ h4 {
       height: 70px;
       width: 70px;
       line-height: 70px;
+
+      &::before {
+        left: -215%;
+        height: 70px;
+        width: 170px;
+      }
     }
   }
 
@@ -760,6 +780,7 @@ h4 {
     height: 150px;
     padding: 20px;
     margin: 0;
+    scroll-behavior: smooth;
 
     &::before {
       content: "";
